# ElectricBilling

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyvenv.cfg  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  18b33b52e0d4_merge_heads.py  37f247f285ce_merge.py  7d48833d0e21_drop_meter_code_from_customers.py  8296d1e54123_change_index_on_consumption_records_to_.py  9f1a2b3c4d5e_seed_customers.py  a1b2c3d4e5f6_add_unique_customer_ts.py  c2d3e4f5g6h7_convert_ts_to_timestamptz.py  d1edf4ba5d91_add_invoice_created_at.py  ebfa316f2793_drop_meter_code_from_customers.py  f4e5d6c7b8a9_merge_heads_2.py
app/: __init__.py  config.py  deps.py  main.py
app/db/: models.py  session.py  utils.py
app/routers/: customers.py  imports.py  invoices.py
app/services/: billing.py  pdf.py
app/static/: htmx.min.js
app/templates/: base.html  dashboard.html
app/templates/customers/: _row.html  _row_generated.html  _table.html  list.html
app/templates/imports/: _preview.html  upload.html
app/templates/invoices/: _row.html  _table.html  invoice.html  list.html
