[tool.poetry]
name = "electric-billing"
version = "0.1.0"
description = "FastAPI + Jinja2 + HTMX electricity billing system"
authors = ["Valentin Kragelj <kragelj.valentin@yahoo.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.30" }
jinja2 = "^3.1"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.13"
python-multipart = "^0.0.9"
pydantic = "^2.8"
weasyprint = "^62.3"
python-dateutil = "^2.9"
pytz = "^2024.1"
pandas = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
