[project]
name = "electric-billing"
version = "0.1.0"
description = "FastAPI + Jinja2 + HTMX electricity billing system"
readme = "README.md"
authors = [ { name = "Valentin Kragelj", email = "kragelj.valentin@yahoo.com" } ]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# This project uses a requirements.txt for dependency management. Install dependencies with: pip install -r requirements.txt